--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,9 @@ services:
   postgres:
     image: postgres:13
     environment:
-      - POSTGRES_USER=airflow
-      - POSTGRES_PASSWORD=airflow
-      - POSTGRES_DB=airflow
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=pwd
+      - POSTGRES_DB=source_db
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
 
