--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,23 @@
 services:
   postgres:
     image: postgres:13
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=airflow
+      - POSTGRES_PASSWORD=airflow
+      - POSTGRES_DB=airflow
+    volumes:
+      - postgres-airflow-volume:/var/lib/postgresql/data
+
+  destination_postgres:
+    image: postgres:latest
+    ports:
+      - "5434:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=pwd
-      - POSTGRES_DB=source_db
+      - POSTGRES_DB=destination_db
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
 
@@ -16,7 +29,7 @@ services:
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
     command: >
       bash -c "airflow db init && 
-               airflow users create --username airflow --password password --firstname John --lastname Doe --role Admin --email admin@example.com"
+               airflow users create --username airflow --password pwd --firstname John --lastname Doe --role Admin --email admin@example.com"
 
   webserver:
     build:
@@ -26,6 +39,7 @@ services:
     depends_on:
       - init-airflow
       - postgres
+      - destination_postgres
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
@@ -34,9 +48,9 @@ services:
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
       - AIRFLOW__CORE__FERNET_KEY=plIipb9RU3-3wJ1UNaAtqVNJrqFEks1-dGbJM34EW7U=
       - AIRFLOW__WEBSERVER__DEFAULT_USER_USERNAME=airflow
-      - AIRFLOW__WEBSERVER__DEFAULT_USER_PASSWORD=password
+      - AIRFLOW__WEBSERVER__DEFAULT_USER_PASSWORD=pwd
       - AIRFLOW_WWW_USER_USERNAME=airflow
-      - AIRFLOW_WWW_USER_PASSWORD=password
+      - AIRFLOW_WWW_USER_PASSWORD=pwd
       - AIRFLOW__WEBSERVER__SECRET_KEY=secret
     command: webserver
     ports:
@@ -55,6 +69,7 @@ services:
     depends_on:
       - init-airflow
       - postgres
+      - destination_postgres
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
@@ -66,9 +81,9 @@ services:
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
       - AIRFLOW__CORE__FERNET_KEY=plIipb9RU3-3wJ1UNaAtqVNJrqFEks1-dGbJM34EW7U=
       - AIRFLOW__WEBSERVER__DEFAULT_USER_USERNAME=airflow
-      - AIRFLOW__WEBSERVER__DEFAULT_USER_PASSWORD=password
+      - AIRFLOW__WEBSERVER__DEFAULT_USER_PASSWORD=pwd
       - AIRFLOW_WWW_USER_USERNAME=airflow
-      - AIRFLOW_WWW_USER_PASSWORD=password
+      - AIRFLOW_WWW_USER_PASSWORD=pwd
       - AIRFLOW__WEBSERVER__SECRET_KEY=secret
     command: scheduler
     volumes:
@@ -78,4 +93,5 @@ services:
       - ~/.aws/config:/root/.aws/config:ro
 
 volumes:
+  postgres-airflow-volume:
   postgres-db-volume:
